Fix some Firefox layout bugs
Firefox calculates vertical padding percents from element height inside flex and grid containers, so anything which
uses the aspect-ratio hack should be in a block container.

--- a/src/components/molecules/PostView/PostView.scss
+++ b/src/components/molecules/PostView/PostView.scss
@@ -2,14 +2,14 @@
   .postView {
     &-content {
       height: 100%;
-      display: flex;
+      display: block;
       flex-flow: column nowrap;
 
       &-thumbnail {
         grid-area: thumb;
         width: 100%;
         height: 0;
-        padding-top: (9/16 * 100%);
+        padding-top: calc(9 / 16 * 100%);
         background-size: cover;
         background-position: center;
       }
