--- a/src/components/pages/AuthorPage/AuthorPage.scss
+++ b/src/components/pages/AuthorPage/AuthorPage.scss
@@ -6,7 +6,7 @@
     align-items: center;
 
     &-info {
-      width: 100%;
+      width: 100vw;
       max-width: var(--page-width);
 
       display: grid;
