--- a/src/components/pages/CreatePostPage/CreatePostPage.scss
+++ b/src/components/pages/CreatePostPage/CreatePostPage.scss
@@ -6,7 +6,7 @@
     align-items: center;
 
     &-form {
-      width: 100%;
+      width: 100vw;
       max-width: var(--page-width);
       display: flex;
       flex-flow: column nowrap;
