--- a/src/components/pages/HomePage/HomePage.scss
+++ b/src/components/pages/HomePage/HomePage.scss
@@ -6,7 +6,7 @@
     align-items: center;
 
     &-posts {
-      width: 100%;
+      width: 100vw;
       max-width: var(--page-width);
       padding: 16px 0;
       display: grid;
